--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="ja">
     <meta charset="utf-8">
     <meta name="viewport" content="width=decive-width,initial-scale=1.0">
-    <title>Roysha</title>
+    <title>Roysha test</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
