--- a/index.html
+++ b/index.html
@@ -19,16 +19,52 @@
             <div class="inner">
                 <div class="outline">
                     <p class="outline-notes">OUR FEATURES</p>
-                    <h2 class="outline-title">Simple and Easy Solution
-                        for Transfer Money Safe
-                        and Faster Way</h2>
+                    <h2 class="outline-title">Simple and Easy Solution for Transfer Money Safe and Faster Way</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et
-                        dolore magna
-                        aliqua.
+                        labore et
+                        dolore magna aliqua.
                         Quis ipsum suspendisse ultrices gravida.</p>
                     <a class="btn" href="#">Learn More</a>
+                </div>
+                <div class="features-list">
+                    <section class="card">
+                        <img class="card-ico" src="images/ico_home01.png" alt="">
+                        <h3 class="card-title">24/7 Services</h3>
+                        <p>Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                    </section>
+                    <section class="card">
+                        <img class="card-ico" src="images/ico_home02.png" alt="">
+                        <h3 class="card-title">Instant Cashout</h3>
+                        <p>Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                    </section>
+                    <section class="card">
+                        <img class="card-ico" src="images/ico_home03.png" alt="">
+                        <h3 class="card-title">Fully Encrypted</h3>
+                        <p>Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                    </section>
+                    <section class="card">
+                        <img class="card-ico" src="images/ico_home04.png" alt="">
+                        <h3 class="card-title">Safe and Secure</h3>
+                        <p>Lorem ipsum dolor sitame coctetur adipiscing elised do eiusmte</p>
+                    </section>
+                </div>
+            </div>
+        </section>
+        <section class="payment">
+            <div class="inner">
+                <div class="payment-pic">
+                    <img src="images/pic_payment.png" alt="">
+                </div>
+                <div class="outline">
+                    <p class="outline-notes">ONLINE PAYMENT</p>
+                    <h2 class="outline-title">Make Your Online Payment Almost Every Site</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna aliqua.</p>
+                    <p>ccumsanamet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna
+                        aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    <a class="btn" href="#">Make a Payment</a>
                 </div>
             </div>
         </section>
